add validation split to map

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrdz8mkO+fH4RredCJg/jp",
+      "authorship_tag": "ABX9TyN9Y1yuy1KrlWBGfcXSlPOi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "x4Hyqy-KZ3Eu",
         "outputId": "50062cc2-b553-48c4-f82d-3b2a48c359e2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.preprocessing import StandardScaler"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,47 +131,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class AddressProcessor():\n",
-        "\n",
-        "  def __init__(self, \n",
-        "               data_path = \"SisFall_dataset/\"):\n",
-        "    self.data_path = data_path\n",
-        "  \n",
-        "  def get_file_name(self, ratio=0.8):\n",
-        "    allfiles = []\n",
-        "    allFolders = sorted(glob.glob(self.data_path + \"*\"))\n",
-        "    for files in allFolders:\n",
-        "      allfiles.append(sorted(glob.glob(files+\"/*.txt\")))\n",
-        "    if 'desktop.ini' in allfiles:\n",
-        "          allfiles.remove('desktop.ini')\n",
-        "    \n",
-        "    dataset = np.hstack(allfiles)\n",
-        "    train = []\n",
-        "    test = []\n",
-        "    for data in dataset:\n",
-        "      if len(data) == 1:\n",
-        "        if random.randint(1,100)>=81:\n",
-        "          test.append(data)\n",
-        "        else:\n",
-        "          train.append(data)\n",
-        "      \n",
-        "      else:\n",
-        "        temp = data.shuffle(data)\n",
-        "        train.extend[:int(len(temp)*ratio)+1]\n",
-        "        test.extend[int(len(temp)*ratio)+1:]\n",
-        "\n",
-        "    return train, test\n"
-      ],
-      "metadata": {
-        "id": "jDXCmXMKosSB"
-      },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,33 +141,6 @@
       },
       "source": [
         "Get all addresses"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import random\n",
-        "random.randint(1,100)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MwOzL8oFeKQp",
-        "outputId": "87456c30-24f6-4d16-a430-1fc6588984b3"
-      },
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 47
-        }
       ]
     },
     {
@@ -244,76 +177,8 @@
         "\n",
         "  return train, test\n"
       ],
-      "execution_count": 87,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train, test = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
-        "len(train), len(test)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MtaxtYESoGtC",
-        "outputId": "154207e8-e66e-4759-b2e6-14e398297786"
-      },
-      "execution_count": 88,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(3508, 888)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 88
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "weight = 200\n",
-        "duration = {'D01':100,'D02':100,'D03':100,'D04':100,'D05':25,'D06':25,'D07':12,\n",
-        "            'D08':12,'D09':12,'D10':12,'D11':12,'D12':12,'D13':12,'D14':12,\n",
-        "            'D15':12,'D16':12,'D17':25,'D18':12,'D19':12,'F01':15,'F02':15,\n",
-        "            'F03':15,'F04':15,'F05':15,'F06':15,'F07':15,'F08':15,'F09':15,\n",
-        "            'F10':15,'F11':15,'F12':15,'F13':15,'F14':15,'F15':15}\n",
-        "\n",
-        "trials =  {'D01':1,'D02':1,'D03':1,'D04':1,'D05':5,'D06':5,'D07':5,\n",
-        "            'D08':5,'D09':5,'D10':5,'D11':5,'D12':5,'D13':5,'D14':5,\n",
-        "            'D15':5,'D16':5,'D17':5,'D18':5,'D19':5,'F01':5,'F02':5,\n",
-        "            'F03':5,'F04':5,'F05':5,'F06':5,'F07':5,'F08':5,'F09':5,\n",
-        "            'F10':5,'F11':5,'F12':5,'F13':5,'F14':5,'F15':5}\n",
-        "s = 0\n",
-        "for key in duration.keys():\n",
-        "  s += weight * duration[key] * trials[key]\n",
-        "s*38"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IKd3zdJC7Oiq",
-        "outputId": "ee19dde5-3e50-49c3-9da3-dc340454834f"
-      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "19912000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -345,13 +210,12 @@
         "      data[name] = data[name].astype(float)\n",
         "    return data\n",
         "\n",
-        "  def merge_features(self, data_path, flag=True):\n",
+        "  def merge_features(self, data_path, flag=False):\n",
         "\n",
         "    dataset = self.read_data(data_path)\n",
         "    \n",
         "    if flag:\n",
         "      dataset['label'] = self.get_label(data_path)\n",
-        "      # print(dataset.shape)\n",
         "      return dataset.to_numpy()\n",
         "    \n",
         "    else:\n",
@@ -372,7 +236,7 @@
         "      return int(0)\n",
         "    elif label =='F':  \n",
         "      label_path = data_path.replace('dataset', 'enhanced')\n",
-        "      labels = pd.read_csv(label_path,header=None)\n",
+        "      labels = pd.read_csv(label_path, header=None)\n",
         "      labels[labels == 2] = 1\n",
         "      return labels\n",
         "\n",
@@ -444,110 +308,8 @@
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from itertools import groupby\n",
-        "list1 = ['hello','hope','hate','hack','bit','basket','code','come','chess']\n",
-        "train, validate, test = np.split(list1, [int(len(list1)*0.8), int(len(list1)*0.9)])\n",
-        "train, validate, test"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dLuEIKbVYedb",
-        "outputId": "a2dd6465-7efa-4eb3-b5f7-a775087cffce"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(array(['hello', 'hope', 'hate', 'hack', 'bit', 'basket', 'code'],\n",
-              "       dtype='<U6'),\n",
-              " array(['come'], dtype='<U6'),\n",
-              " array(['chess'], dtype='<U6'))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x = '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D02_SA01_R01.txt'\n",
-        "start = x.rfind('/') + 1\n",
-        "end = x[start:].find('_') + start\n",
-        "x[start:end]\n",
-        "start, end"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "63Wg7KqKaaqq",
-        "outputId": "caf0ac37-1bb0-4155-9fd1-0140c076735d"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(54, 57)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "[list(g) for k, g in groupby(ad, key=lambda x: x[start:end])]"
-      ],
-      "metadata": {
-        "id": "_fs5sk_iblDP"
-      },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 283
-        },
-        "id": "7HSfFqXqWMWk",
-        "outputId": "c74a4230-ed64-4d6a-fa19-c156772ae857"
-      },
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-55-d52b40259def>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_file_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive/MyDrive/Datasets/SisFall_dataset/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-54-8ee17c746f2e>\u001b[0m in \u001b[0;36mget_file_name\u001b[0;34m(path, ratio)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m       \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m       \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mratio\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m       \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mratio\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.str_' object has no attribute 'shuffle'"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -781,7 +543,7 @@
         "\n",
         "    self.mlp_model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "  def train_mlp(self, n_epochs, batch_size, class_weight):\n",
+        "  def train_mlp(self, n_epochs, batch_size, class_weight, validation_split=0.2):\n",
         "    history = self.mlp_model.fit(\n",
         "        self.X_train,\n",
         "        self.y_train,\n",
@@ -789,6 +551,7 @@
         "        epochs = n_epochs,\n",
         "        shuffle = True,\n",
         "        class_weight = class_weight,\n",
+        "        alidation_split=alidation_split\n",
         "        verbose = 1)\n",
         "    return history\n",
         "\n",
