Pre-Processing completed. +debugged

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9Y1yuy1KrlWBGfcXSlPOi",
+      "authorship_tag": "ABX9TyOMyQcT0dWFU68LLA0Fz/n4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,15 +38,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "50062cc2-b553-48c4-f82d-3b2a48c359e2"
+        "outputId": "6d3a8849-8c94-456e-9e19-6a348de86180"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -81,9 +81,11 @@
         "sn.set()\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "from sklearn.preprocessing import StandardScaler"
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import random\n",
+        "from itertools import groupby, chain\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -105,7 +107,7 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -131,7 +133,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -156,7 +158,7 @@
         "    allfiles.append(sorted(glob.glob(files+\"/*.txt\")))\n",
         "  if 'desktop.ini' in allfiles:\n",
         "        allfiles.remove('desktop.ini')\n",
-        "  \n",
+        "\n",
         "  dataset = np.hstack(allfiles)\n",
         "  start = dataset[0].rfind('/') + 1\n",
         "  end = dataset[0][start:].find('_') + start\n",
@@ -166,10 +168,10 @@
         "  for data in dataset:\n",
         "    if len(data) == 1:\n",
         "      if random.randint(1,100)>=81:\n",
-        "        test.append(data)\n",
+        "        test.extend(data)\n",
         "      else:\n",
-        "        train.append(data)\n",
-        "    \n",
+        "        train.extend(data)\n",
+        "\n",
         "    else:\n",
         "      random.shuffle(data)\n",
         "      train.extend(data[:int(len(data)*ratio)])\n",
@@ -177,7 +179,7 @@
         "\n",
         "  return train, test\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -193,15 +195,15 @@
       "cell_type": "code",
       "source": [
         "class DatasetProcessor():\n",
-        "  \n",
-        "  def __init__(self, \n",
+        "\n",
+        "  def __init__(self,\n",
         "               train_dataset_saving_path=None,\n",
         "               test_dataset_saving_path=None\n",
         "               ):\n",
         "    self.train_dataset_saving_path = train_dataset_saving_path\n",
         "    self.test_dataset_saving_path = test_dataset_saving_path\n",
-        "  \n",
-        "  def read_data(self, data_path):\n",
+        "\n",
+        "  def __read_data(self, data_path):\n",
         "    data = pd.read_csv(data_path, header=None)\n",
         "    data.columns = ['ADXL345_x', 'ADXL345_y', 'ADXL345_z', 'ITG3200_x', 'ITG3200_y', 'ITG3200_z', 'MMA8451Q_x',\n",
         "                    'MMA8451Q_y', 'MMA8451Q_z']\n",
@@ -210,14 +212,14 @@
         "      data[name] = data[name].astype(float)\n",
         "    return data\n",
         "\n",
-        "  def merge_features(self, data_path, flag=False):\n",
+        "  def __add_label(self, data_path, merge_feature=False):\n",
         "\n",
-        "    dataset = self.read_data(data_path)\n",
-        "    \n",
-        "    if flag:\n",
-        "      dataset['label'] = self.get_label(data_path)\n",
+        "    dataset = self.__read_data(data_path)\n",
+        "\n",
+        "    if not merge_feature:\n",
+        "      dataset['label'] = self.__get_label(data_path)\n",
         "      return dataset.to_numpy()\n",
-        "    \n",
+        "\n",
         "    else:\n",
         "      new_dataset = pd.DataFrame()\n",
         "      new_dataset['acc_1'] = dataset.apply(\n",
@@ -226,31 +228,31 @@
         "          lambda row: sqrt((row.MMA8451Q_x ** 2 + row.MMA8451Q_y ** 2 + row.MMA8451Q_z ** 2)), axis=1)\n",
         "      new_dataset['geo'] = dataset.apply(\n",
         "          lambda row: sqrt((row.ITG3200_x ** 2 + row.ITG3200_y ** 2 + row.ITG3200_z ** 2)), axis=1)\n",
-        "      new_dataset['label'] = self.get_label(data_path)\n",
+        "      new_dataset['label'] = self.__get_label(data_path)\n",
         "\n",
-        "      return np.round(new_dataset.to_numpy(),2)\n",
+        "      return np.round(new_dataset.to_numpy(), 2)\n",
         "\n",
-        "  def get_label(self, data_path):\n",
+        "  def __get_label(self, data_path):\n",
         "    label = data_path[54]\n",
         "    if label =='D':\n",
         "      return int(0)\n",
-        "    elif label =='F':  \n",
+        "    elif label =='F':\n",
         "      label_path = data_path.replace('dataset', 'enhanced')\n",
         "      labels = pd.read_csv(label_path, header=None)\n",
-        "      labels[labels == 2] = 1\n",
+        "      # labels[labels == 2] = 1\n",
         "      return labels\n",
         "\n",
         "  def datasets_to_nparray(self, datasets_address_array, outputsize=20000000, column_dimension=10):\n",
         "    result = np.zeros((outputsize, column_dimension), 'int16')\n",
         "    first_index = 0\n",
         "    for address in datasets_address_array:\n",
-        "      feature = self.merge_features(address)\n",
+        "      feature = self.__add_label(address)\n",
         "      # print(len(feature), first_index)\n",
         "      result[first_index : (first_index+len(feature))] = feature\n",
         "      first_index += len(feature)\n",
-        "    \n",
+        "\n",
         "    return result[result.sum(axis=1) != 0]\n",
-        "  \n",
+        "\n",
         "  def windowing2d(self, dataset, window_size=200):\n",
         "    window = window_size * (dataset.shape[1]-1)\n",
         "    cut = dataset.shape[0] % window_size\n",
@@ -273,217 +275,103 @@
         "    label[label > 0] = 1\n",
         "    return feature, label\n",
         "\n",
-        "  def split_dataset(self, feature, label, test_ratio=0.2, validation=True, validation_ratio=0.2):\n",
-        "    X_train, X_test, y_train, y_test = train_test_split(feature, label, test_size=test_ratio, shuffle=True, stratify=label)\n",
-        "    \n",
-        "    if validation:\n",
-        "      X_train, X_validation, y_train, y_validation = train_test_split(X_train, y_train, test_size=validation_ratio, shuffle=True, stratify=y_train)\n",
-        "      return X_train, X_test, X_validation, y_train, y_test, y_validation\n",
-        "    \n",
-        "    else:\n",
-        "      return X_train, X_test, y_train, y_test\n",
+        "  def normalizer(self, scaler, X_train, X_test):\n",
+        "    X_train = scaler.fit_transform(X_train.reshape(-1, X_train.shape[-1])).reshape(X_train.shape)\n",
+        "    X_test = scaler.transform(X_test.reshape(-1, X_test.shape[-1])).reshape(X_test.shape)\n",
+        "    return X_train, X_test\n",
         "\n",
-        "  def normalizer(self, scaler, X_train, X_test, X_validation):\n",
-        "    X_train = scaler.fit_transform(X_train)\n",
-        "    X_test = scaler.transform(X_test)\n",
-        "    X_validation = scaler.transform(X_validation)\n",
-        "    return X_train, X_test, X_validation\n",
-        "    \n",
         "  def dataset_to_tensor(self, window_size, dataset, saving_path):\n",
-        "    features, labels = self.windowing(self.datasets_to_nparray(dataset), window_size)\n",
-        "    return np.savez(saving_path, inputs=features, targets=labels)\n",
-        "    \n",
+        "    features, labels = self.windowing(self.__datasets_to_nparray(dataset), window_size)\n",
+        "    return features, labels\n",
+        "    # return np.savez(saving_path, inputs=features, targets=labels)\n",
+        "\n",
         "  def dataset_loader(self, data_path):\n",
         "    npz = np.load(data_path)\n",
         "    return npz[\"inputs\"].astype(np.float), npz[\"targets\"].astype(np.int)\n",
-        "  \n",
+        "\n",
         "  def downsampling(self, dataset, down_sampleing_factor):\n",
         "      positive = dataset[dataset['targets']==1]\n",
         "      negative = dataset[dataset['targets']==0].sample(n=int(len(positive)* down_sampleing_factor))\n",
         "      return pd.concat([positive, negative], ignore_index=True).sample(frac=1).reset_index(drop=True)\n",
-        "  \n",
+        "\n",
         "  def generate_class_weight(self, label):\n",
-        "    return class_weight.compute_class_weight(class_weight='balanced', classes=np.unique(label), y=label)"
+        "    try:\n",
+        "      return class_weight.compute_class_weight(class_weight='balanced', classes=np.unique(label), y=label)\n",
+        "    except:\n",
+        "      return class_weight.compute_class_weight(class_weight='balanced', classes=np.unique(label.ravel()), y=label.ravel())\n",
+        ""
       ],
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "%%time\n",
-        "ad = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
-        "ad.sort()\n",
+        "\n",
+        "print('1.Split Adresses...')\n",
+        "train, test = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
+        "\n",
         "dp = DatasetProcessor()\n",
-        "result = dp.datasets_to_nparray(ad[:50])\n"
+        "\n",
+        "print('2.Extract Features and Labels...')\n",
+        "\n",
+        "print('------------------------Train Dataset')\n",
+        "train_dataset = dp.datasets_to_nparray(train[:50])\n",
+        "\n",
+        "print('------------------------Test Dataset')\n",
+        "test_dataset = dp.datasets_to_nparray(test[:50])\n",
+        "\n",
+        "print('3.Windowing...')\n",
+        "print('------------------------Train Dataset')\n",
+        "X_train, y_train = dp.windowing2d(train_dataset)\n",
+        "print('------------------------Test Dataset')\n",
+        "X_test, y_test = dp.windowing2d(test_dataset)\n",
+        "\n",
+        "print('4.Normalizing...')\n",
+        "X_train, X_test = dp.normalizer(StandardScaler(), X_train, X_test)\n",
+        "\n",
+        "print('5.Calculate Class Weight...')\n",
+        "weight = dp.generate_class_weight(y_train)\n"
       ],
       "metadata": {
-        "id": "_1pcZKGXL-OM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%time\n",
-        "feature, label = dp.windowing2d(result)\n",
-        "feature.shape, label.shape"
-      ],
-      "metadata": {
+        "id": "_1pcZKGXL-OM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ti5w4bwKq3L2",
-        "outputId": "a11922ec-86e7-4088-fd19-747f9bb734e4"
+        "outputId": "52c5d55b-42c9-4f4e-a037-fed0ab5f794d"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 6.65 ms, sys: 0 ns, total: 6.65 ms\n",
-            "Wall time: 13.7 ms\n"
+            "1.Split Adresses...\n",
+            "2.Extract Features and Labels...\n",
+            "------------------------Train Dataset\n",
+            "------------------------Test Dataset\n",
+            "3.Windowing...\n",
+            "------------------------Train Dataset\n",
+            "------------------------Test Dataset\n",
+            "4.Normalizing...\n",
+            "5.Calculate Class Weight...\n",
+            "CPU times: user 2.97 s, sys: 242 ms, total: 3.21 s\n",
+            "Wall time: 16 s\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((1081, 1800), (1081,))"
+              "((967, 1800), (967,), (822, 1800), (822,))"
             ]
           },
           "metadata": {},
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "weight = dp.generate_class_weight(label)\n",
-        "weight"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e7HiwCNyirf4",
-        "outputId": "f8d055c6-573e-47db-f7bb-e6fcae2af0cf"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%time\n",
-        "X_train, X_test, X_validation, y_train, y_test, y_validation = dp.split_dataset(feature, label)\n",
-        "X_train.shape, X_test.shape, X_validation.shape, y_train.shape, y_test.shape, y_validation.shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ToIP2dfWfTGj",
-        "outputId": "ec95e42e-f331-4369-9c95-dd659f38a174"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 6.59 ms, sys: 971 µs, total: 7.56 ms\n",
-            "Wall time: 12.6 ms\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((691, 1800), (217, 1800), (173, 1800), (691,), (217,), (173,))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_train, X_test, X_validation = dp.normalizer(StandardScaler(), X_train, X_test, X_validation)"
-      ],
-      "metadata": {
-        "id": "KGBaG0mqfTD3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%time\n",
-        "# feature, label = dp.windowing3d(result)"
-      ],
-      "metadata": {
-        "id": "ZsgOQmQNTYK8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9cec51d6-1c74-4b21-f324-ccc6012e0e64"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
-            "Wall time: 9.3 µs\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# feature.shape, label.shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gt_GyhJIi69H",
-        "outputId": "dbcc90b2-7f99-4ae8-e3aa-ff3ad46f4af7"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((549, 200, 9), (549, 1))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
+          "execution_count": 48
         }
       ]
     },
@@ -519,18 +407,18 @@
       "source": [
         "class Models():\n",
         "\n",
-        "  def __init__(self, \n",
+        "  def __init__(self,\n",
         "               X_train,\n",
         "               y_train,\n",
         "               X_test,\n",
         "               y_test,\n",
         "               ):\n",
-        "        \n",
+        "\n",
         "        self.X_train = X_train\n",
         "        self.y_train = y_train\n",
         "        self.X_test = X_test\n",
         "        self.y_test = y_test\n",
-        "        \n",
+        "\n",
         "\n",
         "  def define_mlp(self, input_size, hidden_layer_size, output_size):\n",
         "\n",
@@ -578,17 +466,17 @@
         "                                            tf.keras.layers.Dense(1,activation='sigmoid')])\n",
         "\n",
         "    self.lstm_model.compile(loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
-        "  \n",
+        "\n",
         "  def train_lstm(self):\n",
         "    steps = int(np.ceil(self.X_train_sequence.shape[0] / self.lstm_batch_size))\n",
-        "    \n",
+        "\n",
         "    self.lstm_history = self.lstm_model.fit(\n",
-        "      self.train_dataset_sequence, \n",
+        "      self.train_dataset_sequence,\n",
         "      epochs = self.lstm_epochs,\n",
         "      steps_per_epoch = steps,\n",
         "      # class_weight=class_weight,\n",
         "      )\n",
-        "    \n",
+        "\n",
         "  def define_svm(self):\n",
         "    self.svm_model = LinearSVC(C = 0.0001)\n",
         "    self.svm_model.fit(self.X_train, self.y_train)\n",
@@ -597,20 +485,20 @@
         "    self.svm_prediction = self.svm_model.predict(self.X_test)\n",
         "    print(classification_report(self.y_test, self.svm_prediction))\n",
         "    plot_confusion_matrix(confusion_matrix(self.y_test, self.svm_prediction))\n",
-        "  \n",
+        "\n",
         "    def define_LGR(self):\n",
         "    self.LGR_model = LogisticRegression()\n",
         "    self.LGR_model.fit(self.X_train, self.y_train)\n",
-        "    \n",
+        "\n",
         "  def evaluate_LGR(self):\n",
         "    self.LGR_prediction = self.LGR_model.predict(self.X_test)\n",
         "    print(classification_report(self.y_test, self.LGR_prediction))\n",
         "    plot_confusion_matrix(confusion_matrix(self.y_test, self.LGR_prediction))\n",
-        "  \n",
+        "\n",
         "  def define_knn(self):\n",
         "    self.knn_model = KNeighborsClassifier(n_neighbors=4)\n",
         "    self.knn_model.fit(self.X_train, self.y_train)\n",
-        "    \n",
+        "\n",
         "  def evaluate_knn(self):\n",
         "    self.knn_prediction = self.knn_model.predict(self.X_test)\n",
         "    print(classification_report(self.y_test, self.knn_prediction))\n",
@@ -618,7 +506,7 @@
         "\n",
         "  def define_ensemble_concept(prediction1, prediction2):\n",
         "    return np.logical_or(prediction1 , prediction2.T.ravel().round())\n",
-        "  \n",
+        "\n",
         "  def evaluate_ensemble_concept(self):\n",
         "    print(classification_report(self.y_test, define_ensemble_concept(prediction1, prediction2)))\n",
         "    plot_confusion_matrix(confusion_matrix(self.y_test, define_ensemble_concept(prediction1, prediction2)))"
