working on fall detection starts as soon as possible

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO+h4lxpePmPwDJ80V+L/2c",
+      "authorship_tag": "ABX9TyNh9gZC2NWavDZEoPnA90F3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "x4Hyqy-KZ3Eu",
         "outputId": "30f852dd-85c7-4acc-a757-c64853047558"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "MwqF72o5A4-2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,6 @@
         "import numpy as np\n",
         "import glob\n",
         "import os\n",
-        "window_size = 200\n",
         "from sklearn.utils import compute_class_weight\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sn\n",
@@ -99,7 +98,7 @@
         "from itertools import groupby, chain\n",
         "import pickle"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +119,27 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Constant Variable"
+      ],
+      "metadata": {
+        "id": "RPXpiZUY6HBc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "window_size = 200"
+      ],
+      "metadata": {
+        "id": "xwGG-KeU6GAL"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +165,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +211,7 @@
         "\n",
         "  return train, test\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +341,7 @@
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +422,7 @@
       "metadata": {
         "id": "5X6ABVhhLfNk"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +485,7 @@
       "metadata": {
         "id": "_g6IkRVaDk26"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +500,7 @@
         "id": "Q9IYG7bojExf",
         "outputId": "b02219c4-8ad3-48d6-8ffd-ed575acfaeac"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +619,7 @@
       "metadata": {
         "id": "lXXuUHUODbJL"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +642,7 @@
         "id": "SmtNpuQ1i3zW",
         "outputId": "807ed5e9-6a04-4989-b3dd-b19e22476590"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
